Fix community resource anchor wrapping

--- a/less/udata/resource.less
+++ b/less/udata/resource.less
@@ -13,8 +13,11 @@
         margin-top: 20px;
         margin-bottom: 10px;
         display: flex;
+        flex-flow: row wrap;
+
         h3 {
             margin-top: 0;
+            margin-bottom: 0;
             flex-grow: 1;
         }
     }
